# thesis-forecasting

./: .Rprofile  .gitignore  .python-version  00_get_data.ipynb  01_univariate_tsa.ipynb  README.md  custom_functions.py  environment.yml  environment_macos.yml  environment_no_builds.yml  environment_win.yml  tesi.code-workspace  tesi.jupyterlab-workspace  typescript
body/: 00-retrieve_milan_data.md  01-introduction.md  01-retrieve_data_from_postgres.md  02-bikesharing_and_bikemi.md  02-spatial_joins.md  03-data_ingestion_and_spatial_operations.md  03-time_series_analysis.md  04-data_transform_and_stationarity.md  04-stations_kmeans.md  05-ARIMA.md  05-data_transform_and_stationarity.md  05-time_series_analysis.md  06-ARIMA.md  06-Prophet.md  07-Prophet.md  07-extensions.md  Appendix-open_source_stack.md  _config.yml  _toc.yml  bikemi.md  conclusions.md  frontmatter.md  introduction.md  tesi.bib
code_python/: 00_geospatial_analysis.ipynb  00_get_data.ipynb  00_get_data.py  01_univariate_tsa.ipynb  01_univariate_tsa.py  functions_01.py  pyproject.toml
data/: bikemi_stalls.geojson  milan-circonvallazione.geojson
notebooks/: 00-retrieve_milan_data.ipynb  00_bikemi_external_data.ipynb  00_get_data.ipynb  00_retrieve_external_data.ipynb  00_retrieve_milan_data.ipynb  01-introduction.ipynb  01-retrieve_data_from_postgres.ipynb  01_retrieve_data.ipynb  02-bikesharing_and_bikemi.ipynb  02_geospatial_analysis.ipynb  02_spatial_joins.ipynb  02_time_series_analysis.ipynb  03-data_ingestion_and_spatial_operations.ipynb  03-univariate_tsa.ipynb  03_arima_modelling.ipynb  test.py  (+19 more)
(+120 files in other folders)
