[tool.poetry]
name = "thesis_forecasting"
version = "0.1.0"
description = "final dissertation on time series forecasting and deep learning"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
